Recherche - sélection multiple dans les liste: correction bug visibilité

--- a/occtax/www/css/occtax.search.css
+++ b/occtax/www/css/occtax.search.css
@@ -455,3 +455,9 @@ Légende des mailles*/
   margin-left:0px;
 }
 
+
+/*
+Tweak sumoselect*/
+.SumoSelect.open > .optWrapper {
+  position: initial !important;
+}
